# sidedoc

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  progress.txt  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  publish-pypi.yml  test.yml
benchmarks/: README.md  __init__.py  benchmark_executor.py  generate_report.py  requirements.txt  run_benchmark.py
benchmarks/metrics/: __init__.py  cost_calculator.py  fidelity_scorer.py  token_counter.py
benchmarks/pipelines/: __init__.py  base.py  docint_pipeline.py  ooxml_pipeline.py  pandoc_pipeline.py  raw_docx_pipeline.py  sidedoc_pipeline.py
benchmarks/results/: benchmark-gemini-ooxml.json  benchmark-gemini-pandoc.json  benchmark-gemini-raw_docx.json  benchmark-gemini-sidedoc.json  benchmark-latest.json  benchmark-pandoc.json  benchmark-raw_docx.json  benchmark-sidedoc.json  report-latest.md
benchmarks/scripts/: __init__.py  convert_corpus.py  download_corpus.py
benchmarks/tasks/: __init__.py  base.py  edit_multiturn.py  edit_single.py  summarize.py
benchmarks/tests/: conftest.py  test_base_pipeline.py  test_base_task.py  test_benchmark_executor.py  test_convert_corpus.py  test_cost_calculator.py  test_docint_pipeline.py  test_download_corpus.py  test_edit_multiturn_task.py  test_edit_single_task.py  test_fidelity_scorer.py  test_generate_report.py  test_ooxml_pipeline.py  test_pandoc_pipeline.py  test_raw_docx_pipeline.py  test_readme.py  test_requirements.py  test_run_benchmark.py  test_sidedoc_pipeline.py  test_structure.py  test_summarize_task.py  test_token_counter.py
docs/: format-examples.md  prd-hyperlinks.md  prd-track-changes.md  prd.json  slidedoc-prd.md  spike-pdf-extraction.md  tables-prd.md
docs/plans/: 2026-01-08-github-pages-setup.md
docs/research/: 2026-01-08-github-pages-best-practices.md
scripts/: create_hyperlinks_fixture.py
src/sidedoc/: __init__.py  __main__.py  cli.py  constants.py  extract.py  extract_pdf.py  models.py  package.py  reconstruct.py  reconstruct_pdf.py  store.py  sync.py  utils.py
tests/: __init__.py  conftest.py  helpers.py  test_build_command.py  test_charts.py  test_cli.py  test_columns.py  test_constants.py  test_diff_command.py  test_error_paths.py  test_extract.py  test_extract_command.py  test_extract_pdf.py  test_fixtures.py  test_footnotes.py  test_headers_footers.py  test_hyperlinks.py  test_models.py  test_project_setup.py  test_reconstruct_pdf.py  test_roundtrip.py  test_store.py  test_style_preservation.py  test_sync.py  test_sync_command.py  test_tables.py  test_textboxes.py  test_track_changes.py  test_unpack_command.py
tests/fixtures/: chart_bar.docx  chart_pie.docx  charts.docx  charts_no_fallback.docx  complex.docx  create_chart_fixture.py  create_chart_fixtures.py  create_fixtures.py  create_footnote_fixtures.py  create_pdf_fixtures.py  create_track_changes_fixtures.py  footnotes_consecutive.docx  footnotes_endnotes_mixed.docx  footnotes_formatted.docx  footnotes_in_heading.docx  footnotes_multiblock.docx  footnotes_simple.docx  formatted.docx  hyperlinks.docx  images.docx  lists.docx  simple.docx  smartart_orgchart.docx  tables_complex.docx  tables_formatted.docx  tables_merged.docx  tables_simple.docx  textboxes.docx  track_changes_headings.docx  track_changes_lists.docx  track_changes_multiauthor.docx  track_changes_paragraph.docx  track_changes_simple.docx
website/: mkdocs.yml
website/docs/: benchmarks.md  (+5 more)
(+16 files in other folders)
